# timer

./: Makefile  README.md  excel_main.py  excel_main_2.py  main.py  main_2.py  pyproject.toml  setup.cfg  time_stat.txt  time_stat.xlsx  time_stat_2.xlsx  timer_GUI.py  timer_GUI.ui  timer_GUI_2.py  timer_GUI_2.ui
scripts_ubuntu/: Timer.desktop  timer.sh
tests/: test_timer.py
