[tool.poetry]
name = "timer"
version = "0.1.0"
description = ""
authors = ["AntonTyurin87 <AntonTyurin87gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.9"
pyuic5-tool = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
